--- a/index.html
+++ b/index.html
@@ -1,16 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-
-<h1>The video element</h1>
-
-  
-  
-<video width="320" height="240" controls>
-  <source src="https://youtu.be/VixChkcDC2g" type="video/mp4">
- 
-  Your browser does not support the video tag.
-</video>
+<iframe width="1280" height="640" src="https://www.youtube.com/embed/VixChkcDC2g" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 </body>
 </html>
